--- a/Cadastro_de_Competencia/static/css/home.css
+++ b/Cadastro_de_Competencia/static/css/home.css
@@ -5,6 +5,9 @@ body {
     font-family: 'Arial', sans-serif;
     display: flex;
     justify-content: center;
+    background-attachment: fixed;
+    background-image: url(../imagens/imagem_home.png);
+    overflow: hidden;
 }
 
 div#form_fundo {
