--- a/Cadastro_de_Competencia/templates/home.html
+++ b/Cadastro_de_Competencia/templates/home.html
@@ -12,7 +12,7 @@
     <div id="form_fundo">
         <h1>Aonde você deseja ir?</h1>
         <div id="form_frente">
-            <form action="/cadprof" id="cadprof" method="post">
+            <form action="/cadprof" id="cadprof" method="get">
                 <button type="submit" id="btn_Cadastrar_Pofessores">
                     <span> </span>
                     <span> </span>
@@ -21,7 +21,7 @@
                     <span> </span>Cadastro de Professores
                 </button>
             </form>
-            <form action="/caddisc" id="caddisc" method="post">
+            <form action="/caddisc" id="caddisc" method="get">
                 <button type="submit" id="btn_Cadastrar_Disciplinas">
                     <span> </span>
                     <span> </span>
@@ -30,7 +30,7 @@
                     <span> </span>Cadastro de Disciplinas
                 </button>
             </form>
-            <form action="/vincprofdisc" id="vincprofdisc" method="post">
+            <form action="/vincprofdisc" id="vincprofdisc" method="get">
                 <button type="submit" id="btn_Vincular_Professor_Disciplinas">
                     <span> </span>
                     <span> </span>
@@ -39,7 +39,7 @@
                     <span> </span>Vincular Professores às Disciplinas
                 </button>
             </form>
-            <form action="/turmas" id="turmas" method="post">
+            <form action="/turmas" id="turmas" method="get">
 
                 <button type="submit" id="btn_Turmas">
                     <span> </span>
