--- a/Cadastro_de_Competencia/templates/caddisc.html
+++ b/Cadastro_de_Competencia/templates/caddisc.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro de Disciplinas</title>
+    <link rel="stylesheet" href="/static/css/caddisc.css">
 </head>
 <body>
-    
+    <div id="form_fundo">
+        <h1></h1>
+        <div>
+
+        </div>
+    </div>
 </body>
 </html>
