--- a/Cadastro_de_Competencia/templates/home.html
+++ b/Cadastro_de_Competencia/templates/home.html
@@ -10,43 +10,26 @@
 
 <body>
     <div id="form_fundo">
-        <h1>Aonde você deseja ir?</h1>
+        <h1>MENU</h1>
         <div id="form_frente">
-            <form action="/cadprof" id="cadprof" method="get">
+            <form action="/professores" id="professores" method="get">
                 <button type="submit" id="btn_Cadastrar_Pofessores">
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>Cadastro de Professores
+                    Cadastro de Professores
                 </button>
             </form>
-            <form action="/caddisc" id="caddisc" method="get">
+            <form action="/disciplinas" id="disciplinas" method="get">
                 <button type="submit" id="btn_Cadastrar_Disciplinas">
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>Cadastro de Disciplinas
+                    Cadastro de Disciplinas
                 </button>
             </form>
-            <form action="/vincprofdisc" id="vincprofdisc" method="get">
+            <form action="/vprofessoresdisciplinas" id="vprofessoresdisciplinas" method="get">
                 <button type="submit" id="btn_Vincular_Professor_Disciplinas">
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>Vincular Professores às Disciplinas
+                    Vincular Professores às Disciplinas
                 </button>
             </form>
             <form action="/turmas" id="turmas" method="get">
-
                 <button type="submit" id="btn_Turmas">
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>
-                    <span> </span>Turmas
+                    Turmas
                 </button>
             </form>
         </div>
