--- a/Cadastro_de_Competencia/templates/disciplinas.html
+++ b/Cadastro_de_Competencia/templates/disciplinas.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="linha">
                     <label for="nome">Nome:</label>
-                    <input type="text" name="nome" id="nome" required placeholder="Ex: Administração de serviços de rede">
+                    <input type="text" name="nome" id="nome" required placeholder="Ex: Administração de Serviços de Rede">
                 </div>
                 <div class="linha">
                     <label for="carga_horaria">Carga Horária:</label>
