--- a/Cadastro_de_Competencia/templates/professores.html
+++ b/Cadastro_de_Competencia/templates/professores.html
@@ -25,6 +25,15 @@
                     <label for="telefone">Telefone:</label>
                     <input type="tel" name="telefone" id="telefone" required placeholder="Ex: (85) 99123-4567">
                 </div>
+                <div class="linha">
+                    <label for="habilitacao">Habilitação:</label>
+                    <select name="habilitacao" id="habilitacao" required>
+                        <option value="">Selecione uma habilitação</option>
+                        {% for habilitacao in habilitacoes %}
+                            <option value="{{ habilitacao['id_habilitacao'] }}">{{ habilitacao['descricao'] }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <button type="button" onclick="window.history.back();" id="btn_voltar">
                     Voltar
                 </button>
