--- a/Sistema academico/templates/professores.html
+++ b/Sistema academico/templates/professores.html
@@ -34,7 +34,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                <button type="button" onclick="window.history.back();" id="btn_voltar">
+                <button type="button" onclick="window.location.href='/'" id="btn_Voltar">
                     Voltar
                 </button>
                 <button type="submit" id="btn_cadastrar">
