--- a/Sistema academico/templates/professores-consulta.html
+++ b/Sistema academico/templates/professores-consulta.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta de Professores</title>
     <link rel="stylesheet" href="/static/css/professores-consulta.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -19,6 +20,7 @@
                         <th>Nome</th>
                         <th>Email</th>
                         <th>Telefone</th>
+                        <th>Ações</th> 
                     </tr>
                 </thead>
                 <tbody>
@@ -28,6 +30,16 @@
                         <td>{{ professor.nome }}</td>
                         <td>{{ professor.email }}</td>
                         <td>{{ professor.telefone }}</td>
+                        <td>
+                            <a href="{{ url_for('editar_professor', id=professor.id_professor) }}" class="btn-editar">
+                                <i class="fas fa-pencil-alt"></i>
+                            </a>
+                            <form action="{{ url_for('excluir_professor', id=professor.id_professor) }}" method="POST" style="display: inline;">
+                                <button type="submit" class="btn-excluir" onclick="return confirm('Tem certeza que deseja excluir este professor?');">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </form>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
